# textile_companies

./: .gitignore  pyproject.toml  readme.md  scrapy.cfg
textile_companies/: crawl-once.py  items.py  middlewares.py  pipelines.py  settings.py
textile_companies/spiders/: textile.py
