[tool.poetry]
name = "textile-companies"
version = "0.1.0"
description = ""
authors = ["Joshua Westphal da Silva <joshuasilva333@gmail.com>"]
readme = "README.md"
packages = [{include = "textile_companies"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.7.1"
visidata = "^2.10.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
